# oczy

./: .gitignore  EVALUATION.md  GOALS.md  NOTES.md  README.md  autoresearch.sh  bench_cross_backend.py  bench_hf_cpu.py  bench_hf_quality.py  chat.py  eval_extended.py  experiments.txt  pyproject.toml  showme.py  teach.py  test_glm52_modelscope.py
correction-benchmark/: NOTES.md  README.md  pyproject.toml
correction-benchmark/src/correction_benchmark/: __init__.py  baseline_agents.py  benchmark.py  core.py  dataset.py  scorer.py
correction-benchmark/tests/: test_correction_benchmark.py
experience-autoencoder/: NOTES.md  README.md  pyproject.toml
experience-autoencoder/src/experience_autoencoder/: __init__.py  autoencoder.py  core.py
experience-autoencoder/tests/: test_experience_autoencoder.py  test_hidden_delta.py
experiments/: baselines.py  cortex_agent.py  cortex_conversation_demo.py  curriculum.py  digestive_gate.py  eval_suite.py  logger.py  organism.py  profiler.py  run_experiment.py  run_profiled.py  smoke_articulation_prefix.py  smoke_consolidation_uptake_compare.py  train_then_eval.py
experiments/codebase_qa/: benchmark.py  cortex_agent_recall.py  facts.json  knowledge_store.py  questions.json  test_knowledge_store.py
experiments/data/: curriculum_dataset.py
experiments/lm_perception/: collect_correction_hiddens.py  run_perception_demo.py
experiments/lm_progression/: run_progression.py
experiments/lm_progression/reports/: stage_03_stage_3_syllogism.json  stage_04_stage_4_dialog.md  stage_05_stage_5_disambig.md
experiments/logs/: PROFILED_SUMMARY.md  SUMMARY.md
experiments/organism_curriculum/: dataset.py  run_curriculum.py  scoring.py  validation.py
experiments/organism_curriculum/stages/: stage_4_consolidation.json
experiments/tests/: test_agent_glue.py  test_cortex_agent.py  test_digestive_gate.py
experiments_logs/: 2026-06-19_extended_learning_evaluation.md  2026-06-22_organism_curriculum_and_lm_perception.md  2026-06-23_cortex_kv_contract.md  2026-06-24_cortexagent_raw_hidden_steering.md  2026-06-25_prefix_steering_poc.md  2026-06-25_svd_init_proj_c_persistence.md  2026-06-26_embedder_fork_mock_foreign.md  2026-06-26_hybrid_consolidation_architecture.md  2026-06-26_ingestion_pipeline_scaffold.md  2026-06-26_multi_fact_stressor.md  2026-06-26_multi_fact_stressor_prefix.md  2026-06-26_multi_fact_stressor_real_driver.md  2026-06-26_needle_per_turn_stressor.md  2026-06-26_needle_sweep_script.md  2026-06-26_policy_head_ranking_loop.md  2026-06-26_salience_threshold_ablation.md  2026-06-27_auto_consolidate_sh.md  2026-06-27_cortex_hippocampus_prefix.md  2026-06-27_deprecate_auto_prefix.md  2026-06-27_domain_recall_metric.md  2026-06-27_foreign_minilm_embedder.md  2026-06-27_hippocampus_auto_prefix.md  2026-06-27_hybrid_cap_sh.md  2026-06-27_knowledge_store_prefix_targets.md  2026-06-27_length_4096_needle_sweep.md  2026-06-27_memory_per_byte_sh.md  2026-06-27_multi_fact_embedder_comparison.md  2026-06-27_paraphrase_mode.md  2026-06-27_prefix_targets_paraphrase.md  2026-06-27_real_driver_needle_sweep.md  2026-06-27_use_agent_prefix_validation.md  README.md
identity-hypernetwork/: NOTES.md  README.md  pyproject.toml
identity-hypernetwork/src/identity_hypernetwork/: __init__.py  core.py  hypernet.py  latents.py
identity-hypernetwork/tests/: test_identity_hypernetwork.py
neural-hippocampus/: NOTES.md  README.md  pyproject.toml
neural-hippocampus/src/neural_hippocampus/: __init__.py  core.py  hippocampus.py
neural-hippocampus/tests/: test_neural_hippocampus.py
oczy_common/: __init__.py  episode.py
oczy_lm/: __init__.py  adapter.py  cvec_driver.py
oczy_lm/tests/: test_adapter_parse.py  test_cvec_driver.py
plastic-cortex/: NOTES.md  README.md  pyproject.toml
plastic-cortex/data/: default_corpus.txt
plastic-cortex/data/progression/: stage_0_chars.txt  stage_1_is_a.txt  stage_2_categories.txt  stage_3_syllogism.txt  stage_4_dialog.txt  stage_5_disambig.txt
plastic-cortex/scripts/: build_codex_corpus.py  evaluate_lm.py  generate_curriculum.py  manage_checkpoints.py  train_lm.py
plastic-cortex/src/plastic_cortex/: __init__.py  _numba_kernels.py  bpe_tokenizer.py  char_tokenizer.py  core.py  cortex.py  fast_weight.py  kv_cortex.py  lm_cortex.py  state.py  word_tokenizer.py
plastic-cortex/tests/: test_bpe_tokenizer.py  test_char_tokenizer.py  test_kv_cortex.py  test_kv_cortex_replay_sgd.py  test_kv_cortex_state_bias.py  test_kv_cortex_state_dict.py  test_lm_cortex.py  test_plastic_cortex.py  test_word_tokenizer.py
skill-immune-cortex/: NOTES.md  README.md  pyproject.toml
skill-immune-cortex/src/skill_immune_cortex/: __init__.py  core.py  immune.py
skill-immune-cortex/tests/: test_skill_immune_cortex.py
src/oczy/: __init__.py  workspace.py
src/oczy/common/: __init__.py  bytes.py  episode.py  text_utils.py
src/oczy/experiments/: __init__.py  baselines.py  cortex_agent.py  cortex_conversation_demo.py  curriculum.py  digestive_gate.py  eval_suite.py  ingestion.py  multi_fact_stressor.py  needle_sweep.py  organism.py  rl_pipeline_design.md  run_experiment.py  run_profiled.py  smoke_articulation_prefix.py  smoke_consolidation_uptake_compare.py  train_then_eval.py
src/oczy/experiments/codebase_qa/: __init__.py  benchmark.py  cortex_agent_recall.py  facts.json  knowledge_store.py  questions.json  test_knowledge_store.py
src/oczy/experiments/data/: curriculum_dataset.py
src/oczy/experiments/lm_perception/: collect_correction_hiddens.py  run_perception_demo.py
src/oczy/experiments/lm_progression/: README.md  run_progression.py
src/oczy/experiments/logs/: SUMMARY.md
src/oczy/experiments/organism_curriculum/: __init__.py  dataset.py  run_curriculum.py  scoring.py  validation.py
src/oczy/experiments/tests/: test_agent_glue.py  (+16 more)
src/oczy/lm/: __init__.py  adapter.py  cvec_driver.py
world-model-critic/: NOTES.md  README.md  pyproject.toml
world-model-critic/src/world_model_critic/: __init__.py  core.py  critic.py
world-model-critic/tests/: test_critic_hidden_mlp.py  test_value_head.py  test_world_model_critic.py
(+23 files in other folders)
