[project]
name = "oczy"
version = "0.1.0"
description = "Plastic World Model Agent monorepo: experience becomes state, state becomes fast weights, fast weights become slow priors."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "KinoThe-Kafkaesque" }]
dependencies = [
    "llama-cpp-python>=0.3.31,<0.4",
    "huggingface-hub>=0.20",
    "numba>=0.65",
    "numpy>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
    "plastic-cortex",
    "neural-hippocampus",
    "world-model-critic",
    "identity-hypernetwork",
    "skill-immune-cortex",
    "experience-autoencoder",
    "correction-benchmark",
]
bench = [
    "torch",
    "transformers",
    "psutil",
]
lm = [
    "llama-cpp-python>=0.3.31,<0.4",
    "huggingface-hub>=1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
find = { where = ["src"], include = ["oczy*"] }


[tool.uv.workspace]
members = [
    "plastic-cortex",
    "neural-hippocampus",
    "world-model-critic",
    "identity-hypernetwork",
    "skill-immune-cortex",
    "experience-autoencoder",
    "correction-benchmark",
]

[tool.uv.sources]
plastic-cortex = { workspace = true }
neural-hippocampus = { workspace = true }
world-model-critic = { workspace = true }
identity-hypernetwork = { workspace = true }
skill-immune-cortex = { workspace = true }
experience-autoencoder = { workspace = true }
correction-benchmark = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "plastic-cortex/tests",
    "neural-hippocampus/tests",
    "world-model-critic/tests",
    "identity-hypernetwork/tests",
    "skill-immune-cortex/tests",
    "experience-autoencoder/tests",
    "correction-benchmark/tests",
    "src/oczy/experiments",
    "src/oczy/lm",
]
markers = [
    "slow: tests that load a GGUF model or take >1s",
    "llm: tests that invoke an LLM",
    "requires_model: tests that require a local GGUF cache/model",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["oczy", "plastic_cortex", "neural_hippocampus", "world_model_critic", "identity_hypernetwork", "skill_immune_cortex", "experience_autoencoder", "correction_benchmark"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = ".venv"
include = ["src", "plastic-cortex/src", "neural-hippocampus/src", "world-model-critic/src", "identity-hypernetwork/src", "skill-immune-cortex/src", "experience-autoencoder/src", "correction-benchmark/src"]
exclude = ["**/__pycache__", "**/.venv"]
