[project]
name = "correction-benchmark"
version = "0.1.0"
description = "Eval tasks and metrics for correction uptake, transfer, scope control, forgetting, compression, and identity drift."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "KinoThe-Kafkaesque" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/correction_benchmark"]

