[project]
name = "experience-autoencoder"
version = "0.1.0"
description = "Encodes episodes into compressed learning deltas (Δz) with reconstruction and anti-overgeneralization objectives."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "KinoThe-Kafkaesque" }]
dependencies = ["numpy>=1.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experience_autoencoder"]

