[project]
name = "identity-hypernetwork"
version = "0.1.0"
description = "Compact latent identity vectors (user, domain, style, mistakes) generated into LoRA/adapters by a hypernetwork."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "KinoThe-Kafkaesque" }]
dependencies = [
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_hypernetwork"]

