[project]
name = "neural-hippocampus"
version = "0.1.0"
description = "Surprise-gated neural memory, replay loop, and slow consolidation into adapters."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "KinoThe-Kafkaesque" }]
dependencies = [
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_hippocampus"]

