[project]
name = "world-model-critic"
version = "0.1.0"
description = "Predicts answer acceptance, correction likelihood, and tool outcomes; turns corrections into prediction errors."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "KinoThe-Kafkaesque" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_model_critic"]

